# assetpilot-market-evidence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: candidate-received.yml  ci.yml  deploy-pages.yml  publish-ai-analysis.yml  update-market-data.yml
ai-inbox/: 2026-07-16.json
config/: directions.json  sources.json
docs/: chatgpt-scheduled-task-prompt.md  operations-runbook.md  source-coverage.md  source-licenses.md
public/: archive-manifest.json  manifest.json  market-analysis-latest.json
schemas/: market-analysis-candidate.schema.json  market-analysis.schema.json  market-category.schema.json  market-data-manifest.schema.json  market-direction.schema.json
scripts/: audit_source_coverage.py  publish_data_branch.py  recover_stale_analysis.py  update_market_data.py  validate_ai_candidate.py
src/market_evidence/: __init__.py  ai_candidate.py  analysis_publisher.py  analysis_recovery.py  downsample.py  http_client.py  live_sources.py  monthly.py  normalize.py  package_builder.py  percentiles.py  publication.py  quality.py  schema_validation.py  source_registry.py
tests/: test_ai_candidate.py  test_analysis_publisher.py  test_analysis_recovery.py  test_candidate_discovery.py  test_direction_registry.py  test_downsample.py  test_failure_retention.py  test_http_client.py  test_live_sources.py  test_normalize.py  test_package_builder.py  test_percentiles.py  test_quality.py  test_repository_boundaries.py  test_schema_validation.py  test_source_adapters.py  test_source_registry.py  test_update_pipeline.py  test_workflow_security.py
(+254 files in other folders)
