[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "assetpilot-market-evidence"
version = "0.1.0"
description = "Deterministic public market evidence packages for AssetPilot."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
  "jsonschema==4.25.1",
  "pytest==8.4.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/market_evidence"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

